[package]
name = "enum-snapins"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
registry = "1.2.3"
uuid = "1.8.0"

[dependencies.windows]
version = "0.56.0"
features = ["Win32_System_Com", "Win32_System_LibraryLoader", "Win32_System_Mmc", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging"]